Fix nav grid alignment

--- a/app/assets/stylesheets/components/_nav.scss
+++ b/app/assets/stylesheets/components/_nav.scss
@@ -7,7 +7,7 @@
 
   width: 100%;
 
-  padding: $space-small $space-large;
+  padding: $space-small 0;
 }
 
 .Nav-link {
